--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
       margin: 0;
       padding: 0;
       font-family: 'Dancing Script', cursive;
-      background: url('https://source.unsplash.com/1920x1080/?romantic,couple') no-repeat center center fixed;
-      background-size: cover;
+      background: linear-gradient(to bottom, #ff7e5f, #feb47b); /* 暖色渐变背景 */
       color: white;
       text-align: center;
       display: flex;
